src/mid_calls/swift/swift_external_header.h

void call_ada(const char * text);
void call_c(const char * text);
void call_cpp(const char * text);
void call_cobol(const char * text);
void call_d(const char * text);
void call_fortran(const char * text);
void call_go(const char * text);
void call_haskell(const char * text);
void call_nim(const char * text);
void call_oc(const char * text);
void call_odin(const char * text);
void call_pascal(const char * text);
void call_rust(const char * text);
void call_swift(const char * text);
void call_zig(const char * text);